<resources>
    <string name="app_name">Weather App</string>
    <string name="service_unavailable">Сервис недоступен</string>
    <string name="no_data">Не удалось получить данные</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="main_fragment_title_search_by_zip_code">Search by Zip Code</string>
    <string name="main_fragment_hint_edit_text_zip_code">Zip Code</string>
    <string name="main_fragment_title_btn_get_weather">Get Weather</string>
    <string name="main_fragment_title_tv_location">Location</string>
    <string name="main_fragment_title_tv_temperature">Temperature</string>
    <string name="main_fragment_title_tv_wind_speed">Wind speed</string>
    <string name="main_fragment_title_tv_humidity">Humidity</string>
    <string name="main_fragment_title_tv_visibility">Visibility</string>
    <string name="main_fragment_title_tv_sunrise">Time of Sunrise</string>
    <string name="main_fragment_title_tv_sunset">Time of Sunset</string>
</resources>